--- a/index.html
+++ b/index.html
@@ -4,98 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link 
-    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Mochiy+Pop+One&family=Poppins:wght@200;400;500&display=swap"
-    rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Mochiy+Pop+One&family=Poppins:wght@200;400;500&display=swap"
+      rel="stylesheet"
+      href="styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <div>
-        <div class="text-center">
-            <h1>Skantz Events</h1>
-        </div>
+    <>
+    <div class="text-center">
+      <h1>Skantz Events</h1>
+    </div>
 
-        <div class="row">
-            <div class="column left">
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Hem</a></li>
-                        <li><a href="index2.html">Alla events</a></li>
-                        <li><a href="index3.html">Skapa event</a></li>
-                        <li><a href="index4.html">Om oss</a></li>
-                    </ul>
-                </nav>
-            <div class="column right">
-                <div class="row">
-                    <img class="banner" src="" />
-                </div>
-                <div style="display: flex; justify-content: space-evenly" class="row m-1">
-                    <div class="card">
-                        <img class="cardImg" src="" height="200px" style="width: 100%" />
-                        <div class="container">
-                            <p>Event Name: <b>EVENT</b></p>
-                            <p>Date: <b>01-01-1990</b></p>
-                            <p>Cateogry: <b>Cateogry</b></p>
-                            <p>Breif Description:</p>
-                            <p>Lorum Ipsum Lorum IpsumLo</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img class="cardImg" src="" height="200px" style="width: 100%" />
-                        <div class="container">
-                            <p>Event Name: <b>EVENT</b></p>
-                            <p>Date: <b>01-01-1990</b></p>
-                            <p>Cateogry: <b>Cateogry</b></p>
-                            <p>Breif Description:</p>
-                            <p>Lorum Ipsum Lorum IpsumLo</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img class="cardImg" src="" height="200px" style="width: 100%" />
-                        <div class="container">
-                            <p>Event Name: <b>EVENT</b></p>
-                            <p>Date: <b>01-01-1990</b></p>
-                            <p>Cateogry: <b>Cateogry</b></p>
-                            <p>Breif Description:</p>
-                            <p>Lorum Ipsum Lorum IpsumLo</p>
-                        </div>
-                    </div>
-                </div>
-                <div style="display: flex; justify-content: space-evenly" class="row m-1">
-                    <div class="card">
-                        <img class="cardImg" src="" height="200px" style="width: 100%" />
-                        <div class="container">
-                            <p>Event Name: <b>EVENT</b></p>
-                            <p>Date: <b>01-01-1990</b></p>
-                            <p>Cateogry: <b>Cateogry</b></p>
-                            <p>Breif Description:</p>
-                            <p>Lorum Ipsum Lorum IpsumLo</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img class="cardImg" src="" height="200px" style="width: 100%" />
-                        <div class="container">
-                            <p>Event Name: <b>EVENT</b></p>
-                            <p>Date: <b>01-01-1990</b></p>
-                            <p>Cateogry: <b>Cateogry</b></p>
-                            <p>Breif Description:</p>
-                            <p>Lorum Ipsum Lorum IpsumLo</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img class="cardImg" src="" height="200px" style="width: 100%" />
-                        <div class="container">
-                            <p>Event Name: <b>EVENT</b></p>
-                            <p>Date: <b>01-01-1990</b></p>
-                            <p>Cateogry: <b>Cateogry</b></p>
-                            <p>Breif Description:</p>
-                            <p>Lorum Ipsum Lorum IpsumLo</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        
+    <div class="row">
+      <div class="column left">
+        <nav>
+          <ul>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="index2.html">Alla events</a></li>
+            <li><a href="index3.html">Skapa event</a></li>
+            <li><a href="index4.html">Om oss</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
 
-
+    <div class="grid-container">
+      <div class="grid-item grid-item1"></div>
+      <div class="grid-item grid-item2"></div>
+      <div class="grid-item grid-item3"></div>
+      <div class="grid-item grid-item4"></div>
+      <div class="grid-item grid-item5"></div>
+      <div class="grid-item grid-item6"></div>
+    </div>
   </body>
 </html>
