--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Mochiy+Pop+One&family=Poppins:wght@200;400;500&display=swap"
-      rel="stylesheet"
-      href="styles.css" />
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Mochiy+Pop+One&family=Poppins:wght@200;400;500&display=swap" />
+    <link rel="stylesheet" href="./scss/styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <>
     <div class="text-center">
       <h1>Skantz Events</h1>
     </div>
 
-    <div class="row">
-      <div class="column left">
+    <div class="Bigbox">
+      <div class="column-left">
         <nav>
           <ul>
             <li><a href="index.html">Hem</a></li>
@@ -27,15 +25,111 @@
           </ul>
         </nav>
       </div>
-    </div>
 
-    <div class="grid-container">
-      <div class="grid-item grid-item1"></div>
-      <div class="grid-item grid-item2"></div>
-      <div class="grid-item grid-item3"></div>
-      <div class="grid-item grid-item4"></div>
-      <div class="grid-item grid-item5"></div>
-      <div class="grid-item grid-item6"></div>
+      <div class="column-right">
+        <img class="banner" src="./images/Bannerbild.jpg" />
+        <div class="flex-row1">
+          <div class="card">
+            <img
+              class="cardImg"
+              src="./images/nedladdning.png"
+              height="200px"
+              style="width: 100%" />
+            <div class="container">
+              <p><b>Årets sista aw</b></p>
+              <p><b>2022-12-22</b></p>
+              <p><b>Afterwork</b></p>
+              <p><b>Halva priset på öl- och whiskey provning.</b></p>
+              <p><a href="index6.html">Länk</a></p>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              class="cardImg"
+              src="./images/images.png"
+              height="200px"
+              style="width: 100%" />
+            <div class="container">
+              <p><b>Beer pong</b></p>
+              <p><b>2022-11-25</b></p>
+              <p><b>Afterwork</b></p>
+              <p><b>Beer pong aw!</b></p>
+              <p>
+                <a href="index6.html"><b>Länk</b></a>
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              class="cardImg"
+              src="./images/images1.jpg"
+              height="200px"
+              style="width: 100%" />
+            <div class="container">
+              <p><b>Vinproving </b></p>
+              <p><b>2022-12-01</b></p>
+              <p><b>Afterwork</b></p>
+              <p><b>Vinprovning med utbildad sommelier.</b></p>
+              <p><a href="index6.html">Länk</a></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex-row2">
+          <div class="card">
+            <img
+              class="cardImg"
+              src="./images/images3.jpg"
+              height="200px"
+              style="width: 100%" />
+            <div class="container">
+              <p><b>Cava och Vin</b></p>
+              <p><b>2023-01-16</b></p>
+              <p><b>Afterwork</b></p>
+              <p>
+                <b
+                  >Kom och njut av våra goda drycker, ta med en kollega och få
+                  50% på cava och vin.</b
+                >
+              </p>
+              <p><a href="index6.html">Länk</a></p>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              class="cardImg"
+              src="./images/images4.jpg"
+              height="200px"
+              style="width: 100%" />
+            <div class="container">
+              <p><b>Aw med pontus!</b></p>
+              <p><b>2023-02-24</b></p>
+              <p><b>Afterwork</b></p>
+              <p>
+                <b
+                  >Ta med dina kollegor och nut av vår coktailspecialist Pontus
+                  goda drinkar.</b
+                >
+              </p>
+              <p><a href="index6.html">Länk</a></p>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              class="cardImg"
+              src="./images/images.5.png"
+              height="200px"
+              style="width: 100%" />
+            <div class="container">
+              <p><b>Beer Lovers</b></p>
+              <p><b>2023-04-22</b></p>
+              <p><b>Afterwork</b></p>
+              <p><b>En aw för våra öl älskare! 50% på all inhemsk öl!</b></p>
+              <p><a href="index6.html">Länk</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
