--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
               height="200px"
               style="width: 100%" />
             <div class="container">
-              <p><b>Aw med pontus!</b></p>
+              <p><b>Aw med Pontus!</b></p>
               <p><b>2023-02-24</b></p>
               <p><b>Afterwork</b></p>
               <p>
                 <b
-                  >Ta med dina kollegor och nut av vår coktailspecialist Pontus
+                  >Ta med dina kollegor och njut av vår coktailspecialist Pontus
                   goda drinkar.</b
                 >
               </p>
