--- a/index6.html
+++ b/index6.html
@@ -32,6 +32,11 @@
       <h4>Dagen till ära är det 50% på öl och whiskey provning om du bokar senast 2022-11-30.</h4>
       </h3>
       <h5>Afterwork</h5>
+      <details>
+    <summary>Mer info</summary>
+    <p>Ölprovning 249kr / Tidigare 498kr </p>
+    <p>Whiskeyprovning 249kr / Tidigare 498kr </p>
+</details>
     </div>
     <div class="TheBox">
       <div class="gallery">
